AAA-WorkProduct/lab 6/ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  rules:
  - host: nginx.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ingress-demo
              port:
                number: 80
